# fgmm

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
resources/exps/: armardillo_flat.yaml  bunny_drape_1M.yaml  cube_random.yaml  dragon_drop.yaml
resources/scenes/armardillo_flat/: armardillo_flat.bgeo
resources/scenes/bunny_drape_1M/: bunny_drape.bgeo
resources/scenes/cube_random/: cube_random.bgeo
resources/scenes/dragon_drop/: dragon_drop.bgeo
scripts/: run_qiwu_examples.py
